Changes for 1.6.3

 - [ZBX-749] details box is open by default if any error occured (Vedmak)
 - [ZBX-751] expanded details box added for triggers copying messages (Vedmak)
 - [DEV-268] added support of <mode> for system.cpu.util under Solaris (Sasha)
 - [ZBX-737] the behaviour of the agent's key "vfs.fs.size" improved to be similar to the "df" command (Dmitry)
 - [ZBX-599] the purpose of the configuration parameter StartAgents precised (Dmitry)
 - [ZBX-756] added tooltip in "status of ZABBIX" report for number of items and triggers parameter (Vedmak)
 - [ZBX-740] fixed wrong aggregate graph drawing (Artem)
 - [ZBX-747] fixed template linkage not working properly (Vedmak)
 - [ZBX-746] fixed incorrect processing of net.tcp.listen (Sasha)
 - [ZBX-745] fixed "invalid URL" when use small popup menus like ping etc (Vedmak)
 - [ZBX-744] fixed "invalid URL" when add user to user group (Vedmak)
 - [ZBX-743] fixed problem with "Too many open files" by agent under Solaris 2.5, 2.6 (Sasha)
 - [ZBX-728] fixed displaying "no status update" error for template triggers (Vedmak)
 - [ZBX-738] fixed processing of existing data when -n parameter is used for zabbix_server (Sasha)
 - [ZBX-736] fixed "Undefined index error" during frontend installation (Vedmak)
 - [ZBX-735] fixed filter in audit filtering only logs (Vedmak) 
 - [ZBX-734] fixed evaluation of {ITEM.LASTVALUE} if the trigger expression consists of several items (Sasha) 
 - [ZBX-732] fixed wrong action count in audit log (Vedmak)
 - [ZBX-731] fixed resetting of web graph periods (Vedmak)
 - [ZBX-730] fixed possible Windows agent crash when processing eventlog[] (Sasha)
 - [ZBX-555] added entity counts on interfaces (Vedmak)
 - [ZBX-724] improved queries in "Graphs" page (Artem)
 - [ZBX-725] added new default user group "Disabled" (Vedmak)
 - [ZBX-723] fixed Wrong URL when add rights to user group (Vedmak)
 - [ZBX-720] edited configure.in file to make some error messages more sensible (Dmitry)